@@ -1,0 +1,16 @@
+[buildout]
+develop = .
+parts = py omelette
+
+[py]
+recipe = zc.recipe.egg
+eggs =
+    repoze.catalog
+    nose
+    coverage
+interpreter = py
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs = repoze.catalog
+ignores = setuptools
